Added mapping/ color icons to match weather data for  the current weather data, took out blank div border.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <title>WeatherNow</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
+
     <script
       src="https://kit.fontawesome.com/170b2fd3fe.js"
       crossorigin="anonymous"
