--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
         <div id="result" class="result-box" style="display: none"></div>
     </div>
 
+    <canvas id="weatherChart" width="400" height="200"></canvas>
+
     <!-- footer -->
     <footer>
         <div class="footer">
@@ -49,6 +51,7 @@
     </footer>
 
     <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </body>
 
 </html>
