Changed the search box text and centered the search box

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </header>
     <div class="container">
         <div class="form">
-            <input id="input" type="text" placeholder="Enter a city name" />
+            <input id="input" type="text" placeholder="Location" />
             <button id="button" onclick="getWeather()">GO</button>
         </div>
         <div id="result" class="result-box" style="display: none"></div>
