Enhancing the Search Result

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
             <input id="input" type="text" placeholder="Enter a city name" />
             <button id="button" onclick="getWeather()">GO</button>
         </div>
-        <div id="result" class="result-box" style="display: none"></div>
+        <div class="result-container" style="display: none">
+            <div id="result" class="result-box" style="display: none"></div>
+        </div>
     </div>
 
     <canvas id="weatherChart" width="400" height="200"></canvas>
