--- a/contributors.html
+++ b/contributors.html
@@ -1,24 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beautiful Card Example</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <!-- Card -->
     <div class="card">
         <div class="card-header">
-           
+
         </div>
         <div class="card-body">
             <h2>devdeep2003</h2>
-           <p>Contributed a preloader and change some fonts and border designs of the project.</p>
-            <p > Happy to contribute :)</p>
+            <p>Contributed a preloader and change some fonts and border designs of the project.</p>
+            <p> Happy to contribute :)</p>
         </div>
-      
-        </div>
+
+
+        <!-- Add your card above this and leave a blank line -->
+
     </div>
+
+    <button> <a href="./index.html">back</a></button>
+
+    <!--
+         </div>
+    <div class="card-body">
+        <h2>devdeep2003</h2>
+        <p>Contributed a preloader and change some fonts and border designs of the project.</p>
+        <p> Happy to contribute :)</p>
+    </div>
+ -->
 </body>
+
 </html>
