--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
         <!-- body -->
         <header>
             <div class="homepage">
-                <span class="landing-text">WeatherNow</span> <br />
+                <span class="landing-text">WeatherNow</span> 
+                <br />
                 <span class="landing-text-2">Where Is The Sun? Is It Above Or Below The Clouds?</span>
             </div>
         </header>
