--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+
     <title>WeatherNow</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -12,10 +13,10 @@
 
     <!-- Loader -->
     <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script>
+
 </head>
 
 <body onload="loader()">
-
 
     <!-- Loader -->
     <div class="preloader">
@@ -52,12 +53,6 @@
             <canvas id="hourlyChart" width="400" height="200"></canvas>
         </div>
 
-
-
-
-
-
-
         <!-- footer -->
         <footer>
             <div class="footer">
@@ -74,9 +69,8 @@
         </footer>
     </div>
 
+    <!-- scripts -->
     <script src="script.js"></script>
-
-
 
 </body>
 
