major changes to the UI of site

--- a/contributors.html
+++ b/contributors.html
@@ -5,36 +5,125 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beautiful Card Example</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="contri-style.css">
 </head>
 
 <body>
-    <!-- Card -->
-    <div class="card">
-        <div class="card-header">
 
+    <!-- navbar -->
+    <nav class="navbar">
+        <ul class="nav-list">
+            <li class="nav-item"><a href="./index.html">Home</a></li>
+            <li class="nav-item"><a href="#">Contributors</a></li>
+            <li class="nav-item"><a href="#">About</a></li>
+        </ul>
+    </nav>
+
+    <div class="admin-card">
+        <!-- Admin Card -->
+        <div class="card">
+            <div class="card-body">
+                <div class="card-img">
+                    <img width="64" height="64"
+                        src="https://img.icons8.com/external-victoruler-linear-colour-victoruler/64/external-boy-children-avatar-victoruler-linear-colour-victoruler-1.png"
+                        alt="external-boy-children-avatar-victoruler-linear-colour-victoruler-1" />
+                </div>
+                <div class="card-text">
+                    <h2>Bishal Roy</h2>
+                    <p>Project Lead and Repository Maintainer</p>
+                </div>
+                <div class="seperator"></div>
+                <div class="card-icon">
+                    <a href="https://github.com/R0Y15"><img width="100" height="100"
+                            src="https://img.icons8.com/clouds/100/github.png" alt="github" /></a>
+                </div>
+            </div>
         </div>
-        <div class="card-body">
-            <h2>devdeep2003</h2>
-            <p>Contributed a preloader and change some fonts and border designs of the project.</p>
-            <p> Happy to contribute :)</p>
+    </div>
+
+    <div class="content">
+
+        <!-- Contributors Card -->
+        <div class="card">
+            <div class="card-body">
+                <div class="card-img">
+                    <img width="48" height="48" src="https://img.icons8.com/doodle/48/boy.png" alt="boy" />
+                </div>
+                <div class="card-text">
+                    <h2>Deep Chakraborty</h2>
+                    <p>Contributed a preloader and change some fonts and border designs of the project.</p>
+                </div>
+                <div class="seperator"></div>
+                <div class="card-icon">
+                    <a href="https://github.com/devdeep2003"><img width="100" height="100"
+                            src="https://img.icons8.com/clouds/100/github.png" alt="github" /></a>
+                </div>
+            </div>
         </div>
 
 
         <!-- Add your card above this and leave a blank line -->
 
-    </div>
 
-    <button> <a href="./index.html">back</a></button>
+        <!-- if you're girl then use this card -->
+        <!-- <div class="card">
+            <div class="card-body">
+                <div class="card-img">
+                    <img width="48" height="48" src="https://img.icons8.com/doodle/48/girl.png" alt="girl" />
+                </div>
+                <div class="card-text">
+                    <h2>~ Your Name ~</h2>
+                    <p>~ Anything you want to say about the project or anything you want to say to the world ~</p>
+                </div>
+                <div class="seperator"></div>
+                <div class="card-icon">
+                    <a href="~ Your github link ~"><img width="100" height="100"
+                            src="https://img.icons8.com/clouds/100/github.png" alt="github" /></a>
+                </div>
+            </div>
+        </div>
+         -->
 
-    <!--
-         </div>
-    <div class="card-body">
-        <h2>devdeep2003</h2>
-        <p>Contributed a preloader and change some fonts and border designs of the project.</p>
-        <p> Happy to contribute :)</p>
+
+        <!-- if you're Boy then use this card -->
+        <!-- <div class="card">
+            <div class="card-body">
+                <div class="card-img">
+                    <img width="48" height="48" src="https://img.icons8.com/doodle/48/boy.png" alt="boy" />
+                </div>
+                <div class="card-text">
+                    <h2>~ Your Name ~</h2>
+                    <p>~ Anything you want to say about the project or anything you want to say to the world ~</p>
+                </div>
+                <div class="seperator"></div>
+                <div class="card-icon">
+                    <a href="~ Your github link ~"><img width="100" height="100"
+                            src="https://img.icons8.com/clouds/100/github.png" alt="github" /></a>
+                </div>
+            </div>
+        </div>
+         -->
+
+
+
     </div>
- -->
+    <a href="./index.html"><button class="button bottom-btn">BACK</a></button>
+
+    <!-- footer -->
+    <footer>
+        <div class="footer">
+            <div class="footer-content">
+                <div class="footer-section about">
+                    <p>
+                        <span class="light-text">WeatherNow is a weather application that displays the weather of
+                            any city.</span> <br />
+                        © Roy™ 2023
+                    </p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
 </body>
 
 </html>
