Dynamic copyright year

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <p>
                             <span class="light-text">WeatherNow is a weather application that displays the weather of
                                 any city.</span> <br />
-                            © Roy™ 2023
+                            © Roy™ <span id="copyrightYear"></span>
                         </p>
                     </div>
                 </div>
