Added self to contribution page, added about page and fixed contribution page style.

--- a/index.html
+++ b/index.html
@@ -1,77 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-
+  <head>
     <title>WeatherNow</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
 
-    <script src="https://kit.fontawesome.com/170b2fd3fe.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/170b2fd3fe.js"
+      crossorigin="anonymous"
+    ></script>
 
     <!-- Loader -->
-    <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script>
+    <script
+      src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs"
+      type="module"
+    ></script>
+  </head>
 
-</head>
-
-<body >
+  <body>
     <!-- onload="loader()" -->
     <!-- Loader -->
     <!-- <div class="preloader">
         <div class="spinner"></div>
     </div> -->
 
-
     <div class="content">
-        <!-- navbar -->
-        <nav class="navbar">
-            <ul class="nav-list">
-                <li class="nav-item"><a href="#">Home</a></li>
-                <li class="nav-item"><a href="./contributors.html">Contributors</a></li>
-                <li class="nav-item"><a href="#">About</a></li>
-            </ul>
-        </nav>
+      <!-- navbar -->
+      <nav class="navbar">
+        <ul class="nav-list">
+          <li class="nav-item"><a href="#">Home</a></li>
+          <li class="nav-item">
+            <a href="./contributors.html">Contributors</a>
+          </li>
+          <li class="nav-item"><a href="./About.html">About</a></li>
+        </ul>
+      </nav>
 
-        <!-- body -->
-        <header>
-            <div class="homepage">
-                <span class="landing-text">WeatherNow</span> <br />
-                <span class="landing-text-2">Where Is The Sun? Is It Above Or Below The Clouds?</span>
-            </div>
-        </header>
-        <div class="container">
-            <div class="form">
-                <input id="input" type="text" placeholder="Enter a city name" />
-                <button id="button" class="button" onclick="getWeather()">GO</button>
-            </div>
-            <div class="result-container" style="display: none">
-                <div id="loader" class="loader"></div>
-                <div id="result" class="result-box" style="display: none"></div>
-            </div>
-            <canvas id="hourlyChart" width="400" height="200"></canvas>
+      <!-- body -->
+      <header>
+        <div class="homepage">
+          <span class="landing-text">WeatherNow</span> <br />
+          <span class="landing-text-2"
+            >Where Is The Sun? Is It Above Or Below The Clouds?</span
+          >
         </div>
+      </header>
+      <div class="container">
+        <div class="form">
+          <input id="input" type="text" placeholder="Enter a city name" />
+          <button id="button" class="button" onclick="getWeather()">GO</button>
+        </div>
+        <div class="result-container" style="display: none">
+          <div id="loader" class="loader"></div>
+          <div id="result" class="result-box" style="display: none"></div>
+        </div>
+        <canvas id="hourlyChart" width="400" height="200"></canvas>
+      </div>
 
-        <!-- footer -->
-        <footer>
-            <div class="footer">
-                <div class="footer-content">
-                    <div class="footer-section about">
-                        <p>
-                            <span class="light-text">WeatherNow is a weather application that displays the weather of
-                                any city.</span> <br />
-                            © Roy™ <span id="copyrightYear"></span>
-                        </p>
-                    </div>
-                </div>
+      <!-- footer -->
+      <footer>
+        <div class="footer">
+          <div class="footer-content">
+            <div class="footer-section about">
+              <p>
+                <span class="light-text"
+                  >WeatherNow is a weather application that displays the weather
+                  of any city.</span
+                >
+                <br />
+                © Roy™ <span id="copyrightYear"></span>
+              </p>
             </div>
-        </footer>
+          </div>
+        </div>
+      </footer>
     </div>
 
     <!-- scripts -->
     <script src="script.js"></script>
-
-</body>
-
+  </body>
 </html>
