Back button positioning fixed

--- a/contributors.html
+++ b/contributors.html
@@ -1,111 +1,144 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Beautiful Card Example</title>
     <link rel="stylesheet" href="contri-style.css" />
-</head>
+  </head>
 
-<body>
+  <body>
     <!-- navbar -->
     <nav class="navbar">
-        <ul class="nav-list">
-            <li class="nav-item"><a href="./index.html">Home</a></li>
-            <li class="nav-item"><a href="#">Contributors</a></li>
-            <li class="nav-item"><a href="./About.html">About</a></li>
-        </ul>
+      <ul class="nav-list">
+        <li class="nav-item"><a href="./index.html">Home</a></li>
+        <li class="nav-item"><a href="#">Contributors</a></li>
+        <li class="nav-item"><a href="./About.html">About</a></li>
+      </ul>
     </nav>
 
     <div class="admin-card">
-        <!-- Admin Card -->
-        <div class="card">
-            <div class="card-body">
-                <div class="left">
-                    <div class="card-img">
-                        <img width="64" height="64"
-                            src="https://img.icons8.com/external-victoruler-linear-colour-victoruler/64/external-boy-children-avatar-victoruler-linear-colour-victoruler-1.png"
-                            alt="external-boy-children-avatar-victoruler-linear-colour-victoruler-1" />
-                    </div>
-                    <div class="card-text">
-                        <h2>Bishal Roy</h2>
-                        <p>Project Lead and Repository Maintainer</p>
-                    </div>
-                </div>
-                <div class="right">
-                    <div class="seperator"></div>
-
-                    <a href="https://github.com/R0Y15"><img src="https://img.icons8.com/clouds/100/github.png"
-                            alt="github" /></a>
-                </div>
+      <!-- Admin Card -->
+      <div class="card">
+        <div class="card-body">
+          <div class="left">
+            <div class="card-img">
+              <img
+                width="64"
+                height="64"
+                src="https://img.icons8.com/external-victoruler-linear-colour-victoruler/64/external-boy-children-avatar-victoruler-linear-colour-victoruler-1.png"
+                alt="external-boy-children-avatar-victoruler-linear-colour-victoruler-1"
+              />
             </div>
+            <div class="card-text">
+              <h2>Bishal Roy</h2>
+              <p>Project Lead and Repository Maintainer</p>
+            </div>
+          </div>
+          <div class="right">
+            <div class="seperator"></div>
+
+            <a href="https://github.com/R0Y15"
+              ><img
+                src="https://img.icons8.com/clouds/100/github.png"
+                alt="github"
+            /></a>
+          </div>
         </div>
+      </div>
     </div>
 
     <div class="content" id="cards">
-        <!-- Contributors Card -->
-        <div class="card">
-            <div class="card-body">
-                <div class="left">
-                    <div class="card-img">
-                        <img width="48" height="48" src="https://img.icons8.com/doodle/48/boy.png" alt="boy" />
-                    </div>
-                    <div class="card-text">
-                        <h2>Deep Chakraborty</h2>
-                        <p>Contributed a preloader and change some fonts and border designs of the project</p>
-                    </div>
-                </div>
-                <div class="right">
-                    <div class="seperator"></div>
-                    <a href="https://github.com/devdeep2003"><img src="https://img.icons8.com/clouds/100/github.png"
-                            alt="github" /></a>
-                </div>
+      <!-- Contributors Card -->
+      <div class="card">
+        <div class="card-body">
+          <div class="left">
+            <div class="card-img">
+              <img
+                width="48"
+                height="48"
+                src="https://img.icons8.com/doodle/48/boy.png"
+                alt="boy"
+              />
             </div>
-        </div>
-
-        <div class="card">
-            <div class="card-body">
-                <div class="card-img">
-                    <img width="48" height="48" src="https://img.icons8.com/doodle/48/boy.png" alt="boy" />
-                </div>
-                <div class="card-text">
-                    <h2>Harmanpreet Singh</h2>
-                    <p>Contributed Toward Responsiveness of Page</p>
-                </div>
-                <div class="seperator"></div>
-                <div class="card-icon">
-                    <a href="https://github.com/HarmanPreet-Singh-XYT"><img width="100" height="100"
-                            src="https://img.icons8.com/clouds/100/github.png" alt="github" /></a>
-                </div>
+            <div class="card-text">
+              <h2>Deep Chakraborty</h2>
+              <p>
+                Contributed a preloader and change some fonts and border designs
+                of the project
+              </p>
             </div>
+          </div>
+          <div class="right">
+            <div class="seperator"></div>
+            <a href="https://github.com/devdeep2003"
+              ><img
+                src="https://img.icons8.com/clouds/100/github.png"
+                alt="github"
+            /></a>
+          </div>
         </div>
+      </div>
 
-        <div class="card">
-            <div class="card-body">
-                <div class="left">
-                    <div class="card-img">
-                        <img width="48" height="48" src="https://img.icons8.com/doodle/48/girl.png" alt="girl" />
-                    </div>
-                    <div class="card-text">
-                        <h2>Ej ...</h2>
-                        <p>Updated the icons, removed empty visible div</p>
-                    </div>
-                </div>
-                <div class="right">
-                    <div class="seperator"></div>
-                    <a href="https://github.com/Ejay02"><img src="https://img.icons8.com/clouds/100/github.png"
-                            alt="github" /></a>
-                </div>
+      <div class="card">
+        <div class="card-body">
+          <div class="card-img">
+            <img
+              width="48"
+              height="48"
+              src="https://img.icons8.com/doodle/48/boy.png"
+              alt="boy"
+            />
+          </div>
+          <div class="card-text">
+            <h2>Harmanpreet Singh</h2>
+            <p>Contributed Toward Responsiveness of Page</p>
+          </div>
+          <div class="seperator"></div>
+          <div class="card-icon">
+            <a href="https://github.com/HarmanPreet-Singh-XYT"
+              ><img
+                width="100"
+                height="100"
+                src="https://img.icons8.com/clouds/100/github.png"
+                alt="github"
+            /></a>
+          </div>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card-body">
+          <div class="left">
+            <div class="card-img">
+              <img
+                width="48"
+                height="48"
+                src="https://img.icons8.com/doodle/48/girl.png"
+                alt="girl"
+              />
             </div>
+            <div class="card-text">
+              <h2>Ej ...</h2>
+              <p>Updated the icons, removed empty visible div</p>
+            </div>
+          </div>
+          <div class="right">
+            <div class="seperator"></div>
+            <a href="https://github.com/Ejay02"
+              ><img
+                src="https://img.icons8.com/clouds/100/github.png"
+                alt="github"
+            /></a>
+          </div>
         </div>
+      </div>
 
+      <!-- Add your card above this and leave a blank line -->
 
-        <!-- Add your card above this and leave a blank line -->
+      <!-- if you're girl then use this card -->
 
-        <!-- if you're girl then use this card -->
-
-        <!-- <div class="card">
+      <!-- <div class="card">
         <div class="card-body">
           <div class="left">
             <div class="card-img">
@@ -135,9 +168,9 @@
         </div>
       </div> -->
 
-        <!-- if you're Boy then use this card -->
+      <!-- if you're Boy then use this card -->
 
-        <!-- <div class="card">
+      <!-- <div class="card">
         <div class="card-body">
           <div class="left">
             <div class="card-img">
@@ -165,23 +198,26 @@
         </div>
       </div> -->
     </div>
-    <a href="./" class="button bottom-btn">BACK</a>
 
+    <div class="back">
+      <a href="./" class="button bottom-btn">BACK</a>
+    </div>
     <!-- footer -->
     <footer>
-        <div class="footer">
-            <div class="footer-content">
-                <div class="footer-section about">
-                    <p>
-                        <span class="light-text">WeatherNow is a weather application that displays the weather
-                            of any city.</span>
-                        <br />
-                        © Roy™ <span id="copyrightYear"></span>
-                    </p>
-                </div>
-            </div>
+      <div class="footer">
+        <div class="footer-content">
+          <div class="footer-section about">
+            <p>
+              <span class="light-text"
+                >WeatherNow is a weather application that displays the weather
+                of any city.</span
+              >
+              <br />
+              © Roy™ <span id="copyrightYear"></span>
+            </p>
+          </div>
         </div>
+      </div>
     </footer>
-</body>
-
+  </body>
 </html>
