Add Container/Graph Background Colour Customization

--- a/contributors.html
+++ b/contributors.html
@@ -71,7 +71,7 @@
                 </div>
                 <div class="card-text">
                     <h2>Harmanpreet Singh</h2>
-                    <p>Contributed Toward Responsiveness of Page</p>
+                    <p>Contributed Toward Responsiveness of Page,Color Customization</p>
                 </div>
                 <div class="seperator"></div>
                 <div class="card-icon">
