--- a/contributors.html
+++ b/contributors.html
@@ -77,6 +77,24 @@
                 </div>
             </div>
         </div>
+        
+         <div class="card">
+            <div class="card-body">
+                <div class="card-img">
+                    <img width="48" height="48" src="https://img.icons8.com/doodle/48/girl.png" alt="girl" />
+                </div>
+                <div class="card-text">
+                    <h2>Bimme Audrey</h2>
+                    <p>Contriuted towards adding a gradient background.</p>
+                </div>
+                <div class="seperator"></div>
+                <div class="card-icon">
+                    <a href="~ Your github link ~"><img width="100" height="100"
+                            src="https://img.icons8.com/clouds/100/github.png" alt="github" /></a>
+                </div>
+            </div>
+        </div>
+         
 
         <!-- Add your card above this and leave a blank line -->
 
