--- a/contributors.html
+++ b/contributors.html
@@ -80,6 +80,22 @@
                 </div>
             </div>
         </div>
+        <div class="card">
+            <div class="card-body">
+                <div class="card-img">
+                    <img width="48" height="48" src="https://img.icons8.com/doodle/48/boy.png" alt="boy" />
+                </div>
+                <div class="card-text">
+                    <h2>Devrishi Dutta</h2>
+                    <p>Contributed a line graph that gives the hourly forecast of the given input city </p>
+                </div>
+                <div class="seperator"></div>
+                <div class="card-icon">
+                    <a href="https://github.com/Devrishi-Dutta"><img width="100" height="100"
+                            src="https://img.icons8.com/clouds/100/github.png" alt="github" /></a>
+                </div>
+            </div>
+        </div>
 
         <div class="card">
             <div class="card-body">
