--- a/contributors.html
+++ b/contributors.html
@@ -92,7 +92,7 @@
           </div>
           <div class="card-text">
             <h2>Harmanpreet Singh</h2>
-            <p>Contributed Toward Responsiveness of Page</p>
+            <p>Contributed Toward Responsiveness of Page,Graph Types</p>
           </div>
           <div class="seperator"></div>
           <div class="card-icon">
