--- a/index.html
+++ b/index.html
@@ -52,6 +52,18 @@
       </header>
       <div class="container">
         <div class="form">
+          <!-- DropDown Menu -->
+          <div class="dropdown">
+            <button name="line" class="dropbtn">Default</button>
+            <div class="dropdown-content">
+              <a onclick="selectedDropdown(event)" name="line">Default</a>
+              <a onclick="selectedDropdown(event)" name="bar">Bar</a>
+              <a onclick="selectedDropdown(event)" name="doughnut">Doughnut</a>
+              <a onclick="selectedDropdown(event)" name="polarArea">PolarArea</a>
+              <a onclick="selectedDropdown(event)" name="radar">Radar</a>
+            </div>
+          </div>
+          <!-- End -->
           <input id="input" type="text" placeholder="Enter a city name" />
           <button id="button" class="button" onclick="getWeather()">GO</button>
         </div>
