feat: proper folder structure for CSS and JS files

--- a/About.html
+++ b/About.html
@@ -3,7 +3,7 @@
   <head>
     <title>About WeatherNow</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/about-style.css" />
+    <link rel="stylesheet" href="./css/about-style.css" />
   </head>
 
   <body>
@@ -67,6 +67,6 @@
       </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
