--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>WeatherNow</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
@@ -59,7 +59,9 @@
               <a onclick="selectedDropdown(event)" name="line">Default</a>
               <a onclick="selectedDropdown(event)" name="bar">Bar</a>
               <a onclick="selectedDropdown(event)" name="doughnut">Doughnut</a>
-              <a onclick="selectedDropdown(event)" name="polarArea">PolarArea</a>
+              <a onclick="selectedDropdown(event)" name="polarArea"
+                >PolarArea</a
+              >
               <a onclick="selectedDropdown(event)" name="radar">Radar</a>
             </div>
           </div>
@@ -94,6 +96,6 @@
     </div>
 
     <!-- scripts -->
-    <script src="script.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
