--- a/contributors.html
+++ b/contributors.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Beautiful Card Example</title>
-    <link rel="stylesheet" href="contri-style.css" />
+    <link rel="stylesheet" href="./css/contri-style.css" />
   </head>
 
   <body>
@@ -105,22 +105,35 @@
             /></a>
           </div>
         </div>
-        
+
         <div class="card">
-            <div class="card-body">
-                <div class="card-img">
-                    <img width="48" height="48" src="https://img.icons8.com/doodle/48/boy.png" alt="boy" />
-                </div>
-                <div class="card-text">
-                    <h2>Devrishi Dutta</h2>
-                    <p>Contributed a line graph that gives the hourly forecast of the given input city </p>
-                </div>
-                <div class="seperator"></div>
-                <div class="card-icon">
-                    <a href="https://github.com/Devrishi-Dutta"><img width="100" height="100"
-                            src="https://img.icons8.com/clouds/100/github.png" alt="github" /></a>
-                </div>
+          <div class="card-body">
+            <div class="card-img">
+              <img
+                width="48"
+                height="48"
+                src="https://img.icons8.com/doodle/48/boy.png"
+                alt="boy"
+              />
             </div>
+            <div class="card-text">
+              <h2>Devrishi Dutta</h2>
+              <p>
+                Contributed a line graph that gives the hourly forecast of the
+                given input city
+              </p>
+            </div>
+            <div class="seperator"></div>
+            <div class="card-icon">
+              <a href="https://github.com/Devrishi-Dutta"
+                ><img
+                  width="100"
+                  height="100"
+                  src="https://img.icons8.com/clouds/100/github.png"
+                  alt="github"
+              /></a>
+            </div>
+          </div>
         </div>
       </div>
 
@@ -143,6 +156,37 @@
           <div class="right">
             <div class="seperator"></div>
             <a href="https://github.com/Ejay02"
+              ><img
+                src="https://img.icons8.com/clouds/100/github.png"
+                alt="github"
+            /></a>
+          </div>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="card-body">
+          <div class="left">
+            <div class="card-img">
+              <img
+                width="48"
+                height="48"
+                src="https://img.icons8.com/doodle/48/boy.png"
+                alt="boy"
+              />
+            </div>
+            <div class="card-text">
+              <h2>Ibrahim Rehman</h2>
+              <p>
+                Contributed in adding proper folder structure for CSS and JS
+                files in this project
+              </p>
+            </div>
+          </div>
+          <div class="right">
+            <div class="seperator"></div>
+
+            <a href="https://github.com/ibrahimrehman1"
               ><img
                 src="https://img.icons8.com/clouds/100/github.png"
                 alt="github"
