add API Key Security

--- a/index.html
+++ b/index.html
@@ -96,6 +96,6 @@
     </div>
 
     <!-- scripts -->
-    <script src="./js/script.js"></script>
+    <script src="./js/script.js" type="module"></script>
   </body>
 </html>
